<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductGridFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Clases.Toolbar"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            app:navigationIcon="@drawable/menu_24"
            app:tittle="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/purple_500"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:text="@string/product_tittle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"

            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/product_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"

                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>